--- a/KN_Order_Storage/KN_Order_Storage.csproj
+++ b/KN_Order_Storage/KN_Order_Storage.csproj
@@ -228,6 +228,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Area.xml" />
+    <Content Include="App_Data\ClientSource.xml" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\icons\back.png" />
