Add Logic level
Add Logic level

--- a/KN_Order_Storage/Web.config
+++ b/KN_Order_Storage/Web.config
@@ -17,6 +17,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key ="Area" value ="App_Data/Area.xml" />
+    <add key ="ClientSource" value ="App_Data/ClientSource.xml" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
