--- a/KN_Order_Storage/KN_Order_Storage.csproj
+++ b/KN_Order_Storage/KN_Order_Storage.csproj
@@ -173,6 +173,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Common\Constants.cs" />
+    <Compile Include="Common\Helper.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -203,8 +205,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>KN_Order_Storage.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Logic\Implementor\OptionsProvider.cs" />
+    <Compile Include="Logic\Interfaces\IOptionsProvider.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\OptionModels.cs" />
     <Compile Include="or_order.cs">
       <DependentUpon>KN_Order_Storage.tt</DependentUpon>
     </Compile>
@@ -354,7 +359,9 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
