Client source custom
Client source custom

--- a/KN_Order_Storage/KN_Order_Storage.csproj
+++ b/KN_Order_Storage/KN_Order_Storage.csproj
@@ -289,6 +289,7 @@
     <Content Include="Scripts\bootstrap-datetimepicker.zh-CN.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\client.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
